# treetok

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  clippy.toml  dist-workspace.toml  flake.nix  justfile
.github/workflows/: nix.yml  release.yml
.zed/: settings.json
crates/treetok/: Cargo.toml
crates/treetok/src/: lib.rs  main.rs  output.rs  tree.rs  walk.rs
crates/treetok/src/output/: format.rs  mod.rs
crates/treetok/src/tokenize/: error.rs  local.rs  mod.rs  remote.rs  resolve.rs  run.rs
crates/treetok/tests/: tokenizer_parity.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
