[package]
name = "treetok"
description = "Display directory trees with LLM token counts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "treetok"
path = "src/lib.rs"

[[bin]]
name = "treetok"
path = "src/main.rs"

[dependencies]
clap.workspace = true
miette.workspace = true
thiserror.workspace = true

tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
aho-corasick = "1"
ignore = "0.4"
tiktoken-rs = "0.9"
owo-colors = "4"
exitcode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest.workspace = true
tempfile = "3"
# Needed for #[tokio::test] in integration tests (macros not in workspace features).
tokio = { version = "1", features = ["macros", "rt"] }
# HuggingFace tokenizers – used in tokenizer_parity integration test.
tokenizers = "0.19"

[lints]
workspace = true
